--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "amqp": "^0.2.4",
     "q": "^1.4.1",
     "socket.io": "^1.3.7",
-    "websocket": "^1.0.22"
+    "websocket": "^1.0.22",
+    "nodemailer": "^2.3.0",
+    "nodemailer-smtp-transport": "^1.0.4",
+    "bluebird": "^3.0.5"
   }
 }
