--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "websocket": "^1.0.22",
     "nodemailer": "^2.3.0",
     "nodemailer-smtp-transport": "^1.0.4",
-    "bluebird": "^3.0.5"
+    "bluebird": "^3.0.5",
+    "whatwg-fetch": "~0.11.0"
   }
 }
