--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "nodemailer": "^2.3.0",
     "nodemailer-smtp-transport": "^1.0.4",
     "bluebird": "^3.0.5",
-    "whatwg-fetch": "~0.11.0"
+    "node-fetch": "~1.4.0"
   }
 }
