--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "license": "GPL",
   "dependencies": {
     "amqp": "^0.2.4",
-    "q": "^1.4.1",
-    "socket.io": "^1.3.7",
-    "websocket": "^1.0.22",
+    "async": "^2.0.0",
+    "bluebird": "^3.0.5",
+    "cheerio": "^0.20.0",
+    "mysql": "^2.11.1",
+    "needle": "^1.0.0",
+    "node-fetch": "~1.4.0",
     "nodemailer": "^2.3.0",
     "nodemailer-smtp-transport": "^1.0.4",
-    "bluebird": "^3.0.5",
-    "node-fetch": "~1.4.0"
+    "q": "^1.4.1",
+    "request": "^2.73.0",
+    "socket.io": "^1.3.7",
+    "socks5-http-client": "^1.0.2",
+    "websocket": "^1.0.22"
   }
 }
